--- a/web-gui/test_progress_frontend.html
+++ b/web-gui/test_progress_frontend.html
@@ -1,100 +1,100 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Format Progress Component Test</title>
-    <link rel="stylesheet" href="public/styles.css">
-    <style>
-        body {
-            padding: 20px;
-            font-family: Arial, sans-serif;
-        }
-        .test-section {
-            margin: 20px 0;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 5px;
-            background: #667eea;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #5568d3;
-        }
-    </style>
-</head>
-<body>
-    <h1>Format Progress Component Test</h1>
-
-    <div class="test-section">
-        <h2>Test 1: Progress Component Creation</h2>
-        <button onclick="testComponentCreation()">Test Component Creation</button>
-        <div id="test1-result"></div>
-    </div>
-
-    <div class="test-section">
-        <h2>Test 2: Progress Updates</h2>
-        <button onclick="testProgressUpdates()">Test Progress Updates</button>
-        <div id="test2-result"></div>
-    </div>
-
-    <div class="test-section">
-        <h2>Test 3: Log Entry Types</h2>
-        <button onclick="testLogTypes()">Test Log Types</button>
-        <div id="test3-result"></div>
-    </div>
-
-    <script src="public/app.js"></script>
-    <script>
-        // Test component creation
-        function testComponentCreation() {
-            const resultDiv = document.getElementById('test1-result');
-            try {
-                const html = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
-                resultDiv.innerHTML = '<p style="color: green;">[OK] Component created successfully</p>' + html;
-            } catch (e) {
-                resultDiv.innerHTML = '<p style="color: red;">[ERROR] ' + e.message + '</p>';
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Format Progress Component Test</title>
+        <link rel="stylesheet" href="public/styles.css" />
+        <style>
+            body {
+                padding: 20px;
+                font-family: Arial, sans-serif;
             }
-        }
+            .test-section {
+                margin: 20px 0;
+                padding: 20px;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+            }
+            button {
+                padding: 10px 20px;
+                margin: 5px;
+                background: #667eea;
+                color: white;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+            }
+            button:hover {
+                background: #5568d3;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Format Progress Component Test</h1>
 
-        // Test progress updates
-        function testProgressUpdates() {
-            const resultDiv = document.getElementById('test2-result');
-            const progressId = 'test-progress-updates';
+        <div class="test-section">
+            <h2>Test 1: Progress Component Creation</h2>
+            <button onclick="testComponentCreation()">Test Component Creation</button>
+            <div id="test1-result"></div>
+        </div>
 
-            // Create component
-            resultDiv.innerHTML = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
+        <div class="test-section">
+            <h2>Test 2: Progress Updates</h2>
+            <button onclick="testProgressUpdates()">Test Progress Updates</button>
+            <div id="test2-result"></div>
+        </div>
 
-            // Simulate progress updates
-            setTimeout(() => updateFormatProgress(progressId, 0, 'Initializing...', 'info'), 100);
-            setTimeout(() => updateFormatProgress(progressId, 25, 'Creating partitions...', 'info'), 500);
-            setTimeout(() => updateFormatProgress(progressId, 50, 'Formatting boot partition...', 'info'), 1000);
-            setTimeout(() => updateFormatProgress(progressId, 75, 'Formatting root partition...', 'info'), 1500);
-            setTimeout(() => updateFormatProgress(progressId, 90, 'Finalizing...', 'info'), 2000);
-            setTimeout(() => updateFormatProgress(progressId, 100, 'Completed successfully!', 'success'), 2500);
-        }
+        <div class="test-section">
+            <h2>Test 3: Log Entry Types</h2>
+            <button onclick="testLogTypes()">Test Log Types</button>
+            <div id="test3-result"></div>
+        </div>
 
-        // Test log entry types
-        function testLogTypes() {
-            const resultDiv = document.getElementById('test3-result');
-            const progressId = 'test-log-types';
+        <script src="public/app.js"></script>
+        <script>
+            // Test component creation
+            function testComponentCreation() {
+                const resultDiv = document.getElementById('test1-result');
+                try {
+                    const html = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
+                    resultDiv.innerHTML = '<p style="color: green;">[OK] Component created successfully</p>' + html;
+                } catch (e) {
+                    resultDiv.innerHTML = '<p style="color: red;">[ERROR] ' + e.message + '</p>';
+                }
+            }
 
-            // Create component
-            resultDiv.innerHTML = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
+            // Test progress updates
+            function testProgressUpdates() {
+                const resultDiv = document.getElementById('test2-result');
+                const progressId = 'test-progress-updates';
 
-            // Test different log types
-            setTimeout(() => updateFormatProgress(progressId, null, 'Info message', 'info'), 100);
-            setTimeout(() => updateFormatProgress(progressId, null, 'Success message', 'success'), 300);
-            setTimeout(() => updateFormatProgress(progressId, null, 'Warning message', 'warning'), 500);
-            setTimeout(() => updateFormatProgress(progressId, null, 'Error message', 'error'), 700);
-        }
-    </script>
-</body>
+                // Create component
+                resultDiv.innerHTML = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
+
+                // Simulate progress updates
+                setTimeout(() => updateFormatProgress(progressId, 0, 'Initializing...', 'info'), 100);
+                setTimeout(() => updateFormatProgress(progressId, 25, 'Creating partitions...', 'info'), 500);
+                setTimeout(() => updateFormatProgress(progressId, 50, 'Formatting boot partition...', 'info'), 1000);
+                setTimeout(() => updateFormatProgress(progressId, 75, 'Formatting root partition...', 'info'), 1500);
+                setTimeout(() => updateFormatProgress(progressId, 90, 'Finalizing...', 'info'), 2000);
+                setTimeout(() => updateFormatProgress(progressId, 100, 'Completed successfully!', 'success'), 2500);
+            }
+
+            // Test log entry types
+            function testLogTypes() {
+                const resultDiv = document.getElementById('test3-result');
+                const progressId = 'test-log-types';
+
+                // Create component
+                resultDiv.innerHTML = createFormatProgressComponent('test-device', 'Raspberry Pi 5');
+
+                // Test different log types
+                setTimeout(() => updateFormatProgress(progressId, null, 'Info message', 'info'), 100);
+                setTimeout(() => updateFormatProgress(progressId, null, 'Success message', 'success'), 300);
+                setTimeout(() => updateFormatProgress(progressId, null, 'Warning message', 'warning'), 500);
+                setTimeout(() => updateFormatProgress(progressId, null, 'Error message', 'error'), 700);
+            }
+        </script>
+    </body>
 </html>
