--- a/web-gui/public/index.html
+++ b/web-gui/public/index.html
@@ -1300,6 +1300,7 @@
                                             <option value="IT">Italy (IT)</option>
                                             <option value="ES">Spain (ES)</option>
                                             <option value="NL">Netherlands (NL)</option>
+                                            <option value="GR">Greece (GR)</option>
                                         </select>
                                         <small class="form-hint">Select your country for regulatory compliance</small>
                                     </label>
